# Demake-Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docs.md  excelimport.txt  pyproject.toml
src/: config.py  database.py  dependencies.py  logger.py  main.py  models.py
src/auth/: exceptions.py  jwt.py  routers.py  schemas.py
src/comment/: exceptions.py  routers.py  schemas.py  service.py
src/follow/: exceptions.py  routers.py  schemas.py  service.py
src/like/: exceptions.py  routers.py  schemas.py  service.py
src/retweet/: exceptions.py  routers.py  schemas.py  service.py
src/tweets/: exceptions.py  routers.py  schemas.py  service.py  utils.py
src/users/: email.py  exceptions.py  routers.py  schemas.py  service.py  userrepository.py  utils.py
templates/: user-verification.html
tests/: conftest.py  test_login.py  test_user_signup.py
